'Statement' as immutable object